añadidos ejercicios AD y arreglado Chronometer de PUL/Buscaminas

--- a/AD/apache-tomcat-7.0.23/webapps/ejemploMVC/index.html
+++ b/AD/apache-tomcat-7.0.23/webapps/ejemploMVC/index.html
@@ -4,5 +4,9 @@
 <a href="/ejemploMVC/controlador?accion=alta">Alta de Departamento</a></p>
 <p align='center'><a href="/ejemploMVC/controlador?accion=listado">Listado de Departamentos</a>
 </p>
+<p align='center'>
+<a href="/ejemploMVC/controlador?accion=altaemple">Alta de Empleados</a></p>
+<p align='center'><a href="/ejemploMVC/controlador?accion=listadoemple">Listado de Empleados</a>
+</p>
 </body>
 </html>
